# bot

./: .env.example  .gitignore  BOT.code-workspace  ETAPES_GITHUB.md  GUIDE_GITHUB.md  database_up.py  exemple_preview-menu.txt  menu_structure.txt  requirements.txt  run.py  staff.env  start.py  value.env.example
api/: .gitignore  Cargo.toml  README.md  exemple.env
api/docs/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE.md  EXAMPLES.md  INSTALLATION.md  README.md  SECURITY.md  TESTING.md
api/migrations/2026-01-12-171845-0000_create_table/: down.sql  up.sql
api/migrations/2026-01-12-172404-0000_alter_table/: down.sql  up.sql
api/migrations/2026-01-12-173640-0000_update_trigger/: down.sql  up.sql
api/migrations/2026-01-16-140716-0000_insert_1K6_kfc/: down.sql  up.sql
api/migrations/2026-02-07-135748-0000_make_customer_id_pk/: up.sql
api/migrations/2026-02-07-140000-0000_add_prenom_numero_ddb/: down.sql  up.sql
api/migrations/2026-04-06-120000-0000_add_bearer_token/: down.sql  up.sql
api/src/: errors.rs  main.rs  recheck.rs  schema.rs
api/src/api/: generate.rs  get_old.rs  insert.rs  maj.rs  middleware.rs  mod.rs  update.rs
api/src/database/: mod.rs  model.rs
click/: .gitignore  __init__.py  app.py  requirements.txt  run.py  test_menu_debug.py  test_menu_dump.json
click/api/: routes.py
click/migrations/: 001_initial.sql  (+7 more)
insert/: insert.py  insert_asynchrone.py  valid10_CAP.txt  valid1_CAP.txt  valid4_CAP.txt  valid5_CAP.txt
main/: bot.py  creation_log.py  error_log.txt  injecteur_log.py  recup_token.py  requirements.txt  suppression_log.py
(+34 files in other folders)
